# blue-pill-rust

./: Cargo.toml  README.md  notes.md  platformio.ini
app/demo-accelerometer/: Cargo.toml
app/demo-accelerometer/src/: main.rs
app/demo-display-hx1230/src/: main.rs
app/demo-display-max7219/: Cargo.toml
app/demo-display-max7219/src/: main.rs
app/demo-panic-led/src/: main.rs
app/demo-pressure-bmp280/src/: main.rs
demo-blinky/: Cargo.toml
demo-blinky-semihosting/src/: main.rs
demo-blinky-standalone/: Cargo.toml
demo-blinky/src/: main.rs
demo-display-hx1230-spi2/: Cargo.toml
demo-display-hx1230-spi2/src/: display.rs  main.rs
demo-display-tm1637/: Cargo.toml
demo-hx1230-spi2/: Cargo.toml
demo-hx1230-spi2/src/: hx1230_driver.rs  hx1230_sw_driver.rs  main.rs
demo-panic-led/: Cargo.toml
demo-panic-led/src/: main.rs
demo/demo-accelerometer/: Cargo.toml
demo/demo-accelerometer/src/: main.rs
demo/demo-blinky-semihosting/: Cargo.toml
demo/demo-blinky-semihosting/src/: main.rs
demo/demo-blinky-standalone/: Cargo.toml
demo/demo-blinky-standalone/src/: main.rs
demo/demo-dht11/: Cargo.toml
demo/demo-dht11/src/: main.rs
demo/demo-display-hx1230/: Cargo.toml
demo/demo-display-hx1230-simple/: Cargo.toml
demo/demo-display-hx1230-simple/src/: main.rs
demo/demo-display-hx1230-spi2/: Cargo.toml
demo/demo-display-hx1230-spi2/src/: display.rs  main.rs
demo/demo-display-tm1637/: Cargo.toml
demo/demo-display-tm1637/src/: main.rs
demo/demo-panic-led/: Cargo.toml
demo/demo-pressure-bmp280/: Cargo.toml
demo/demo-pressure-bmp280/src/: main.rs
demo/demo-pwm/: Cargo.toml
demo/demo-pwm/src/: main.rs
demo/demo-temperature-dht11/: Cargo.toml
demo/demo-temperature-dht11/src/: main.rs
doc/: display_hx1230.md  display_max7219.md  display_tm1637.md  getting_started.md  notes.md  panic_handling.md  pwm_channels.md  temperature-dht11.md
lib-common/src/: lib.rs  mini_result.rs
lib-display-buffer/src/: draw.rs
lib-display-hx1230/src/: command.rs  driver.rs  lib.rs
lib-panic-led/src/: lib.rs
lib/lib-common/src/: mini_result.rs
lib/lib-display-buffer/: Cargo.toml
lib/lib-display-buffer/src/: buffer.rs  lib.rs
lib/lib-display-hx1230/: Cargo.toml
lib/lib-display-hx1230/src/: command.rs  driver.rs  encode.rs  interface.rs  lib.rs
lib/lib-panic-led/: Cargo.toml
