[package]
name = "demo-accelerometer"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
lib-panic-led = { path = "../../lib/lib-panic-led" }
embedded-graphics = "0.7.1"
hx1230 = "0.3.2"
mpu6050 = "0.1.6"
panic-semihosting = "0.6"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

[dependencies.arrayvec]
version = "0.7.2"
default-features = false