[package]
name = "demo-blinky-semihosting"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
panic-semihosting = "0.6"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]