[package]
name = "demo-display-hx1230-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"

lib-common = { path = "../../lib/lib-common" }
lib-panic-led = { path = "../../lib/lib-panic-led" }

[dependencies.hx1230]
git = "https://github.com/viktorchvatal/hx1230.git"
version="0.1.2"
default-features = false

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]