[package]
name = "demo-display-tm1637"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
tm1637 = "0.1.0"
lib-common = { path = "../../lib/lib-common" }
lib-panic-led = { path = "../../lib/lib-panic-led" }

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
features = ["rt", "stm32f103", "medium"]