[package]
name = "demo-pwm"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
tm1637 = "0.1.0"
lib-panic-led = { path = "../../lib/lib-panic-led" }
micromath = "2.0.0"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
features = ["rt", "stm32f103", "medium"]